Add action changeUsername And dispatch.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<div class="cont">
-  <h1>NgRx Container</h1>
+<div class="container">
+  <h1>NgRx Starter</h1>
+
+  <button class="btn btn-primary" (click)="changeUsername()">
+    Change username
+  </button>
 </div>
