use Observable on User.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,7 @@
   <button class="btn btn-primary" (click)="changeUsername()">
     Change username
   </button>
+
+  <h4>Username: {{ (user | async).username }}</h4>
+  <h4>isAdmin: {{ (user | async).isAdmin }}</h4>
 </div>
