Create User Interface and Change return type any to User.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,6 @@
     Change username
   </button>
 
-  <h4>Username: {{ (user | async).username }}</h4>
-  <h4>isAdmin: {{ (user | async).isAdmin }}</h4>
+  <h4>Username: {{ (user | async)?.username }}</h4>
+  <h4>isAdmin: {{ (user | async)?.isAdmin }}</h4>
 </div>
